<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">boatTracker</string>
    <string name="action_settings">Settings</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="serial_data">Serial Data</string>
    <string name="start_logging">Start Logging</string>
    <string name="stop_logging">Stop Logging</string>
    <string name="waiting_to_log">Waiting for GPS...</string>
    <string name="open_usb">Open USB device</string>
    <string name="close_usb">Close USB device</string>
    <string name="led_off">LED off</string>
    <string name="led_on">LED on</string>
    

</resources>